Import of NEKOKAK/CGI-Application-Plugin-DebugScreen-0.02 from CPAN.
gitpan-cpan-distribution: CGI-Application-Plugin-DebugScreen
gitpan-cpan-version:      0.02
gitpan-cpan-path:         NEKOKAK/CGI-Application-Plugin-DebugScreen-0.02.tar.gz
gitpan-cpan-author:       NEKOKAK
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -19,7 +19,7 @@ This module requires these other modules and libraries:
  - strict
  - warnings
  - CGI::Application
- - UNIVERSAL::require '0.10'
+ - HTML::Template
  - Devel::StackTrace
  - IO::File
 
