Import of NEKOKAK/CGI-Application-Plugin-DebugScreen-0.03 from CPAN.
gitpan-cpan-distribution: CGI-Application-Plugin-DebugScreen
gitpan-cpan-version:      0.03
gitpan-cpan-path:         NEKOKAK/CGI-Application-Plugin-DebugScreen-0.03.tar.gz
gitpan-cpan-author:       NEKOKAK
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -22,6 +22,7 @@ This module requires these other modules and libraries:
  - HTML::Template
  - Devel::StackTrace
  - IO::File
+ - CGI::Application::Plugin::ViewCode
 
 COPYRIGHT AND LICENCE
 
