Import of NEKOKAK/CGI-Application-Plugin-DebugScreen-0.04 from CPAN.
gitpan-cpan-distribution: CGI-Application-Plugin-DebugScreen
gitpan-cpan-version:      0.04
gitpan-cpan-path:         NEKOKAK/CGI-Application-Plugin-DebugScreen-0.04.tar.gz
gitpan-cpan-author:       NEKOKAK
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -23,6 +23,7 @@ This module requires these other modules and libraries:
  - Devel::StackTrace
  - IO::File
  - CGI::Application::Plugin::ViewCode
+ - UNIVERSAL::require
 
 COPYRIGHT AND LICENCE
 
