--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension CGI::Application::Plugin::DebugScreen.
 
+0.04  Wed Dec 21 16:06 2005
+        - add UNIVERSAL::require support.
+
 0.03  Wed Dec 21 10:18 2005
         - add use CGI::Application::Plugin::ViewCode.
         - litle fixed.
