Import of NEKOKAK/CGI-Application-Plugin-DebugScreen-0.05 from CPAN.
gitpan-cpan-distribution: CGI-Application-Plugin-DebugScreen
gitpan-cpan-version:      0.05
gitpan-cpan-path:         NEKOKAK/CGI-Application-Plugin-DebugScreen-0.05.tar.gz
gitpan-cpan-author:       NEKOKAK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension CGI::Application::Plugin::DebugScreen.
 
+0.05  Thu Dec 21 2005
+        - litle correction.
+        - Addition of a few documents.
+
 0.04  Wed Dec 21 16:06 2005
         - add UNIVERSAL::require support.
 
